# SendIT

./: .gitignore  README.md  package-lock.json
backend/: CMakeLists.txt  Connection.h  DatabaseService.h  TokenUtilities.cpp  TokenUtilities.h  WebSocketService.cpp  WebSocketService.h  main.cpp
backend/bridge/: Bridge  CMakeCache.txt  CMakeLists.txt  Dockerfile  Makefile  cmake_install.cmake  main.cpp
backend/src/: Connection.cpp  Connection.h  DatabaseService.cpp  DatabaseService.h  TokenUtilities.cpp  TokenUtilities.h  WebSocketService.cpp  WebSocketService.h
backend/websocket/: Dockerfile  server.cpp
frontend/: Dockerfile  package-lock.json  package.json  vite.config.ts
frontend/SendIT/: index.html  package-lock.json  package.json
frontend/SendIT/src/: App.tsx  globals.scss  index.css
frontend/SendIT/src/pages/: Home.tsx  WSExample.tsx
frontend/SendIT/src/style/: typography.module.scss  variables.scss
frontend/nginx/: default.conf
frontend/src/: App.tsx
frontend/src/components/AddFriendCard/: AddFriendCard.tsx
frontend/src/components/Button/: Button.module.scss  Button.tsx
frontend/src/components/FriendInfo/: FriendInfo.module.scss  FriendInfo.tsx
frontend/src/components/InboxCard/: InboxCard.module.scss  InboxCard.tsx
frontend/src/components/InputField/: InputField.module.scss  InputField.tsx
frontend/src/components/Logo/: Logo.module.scss
frontend/src/components/MessageField/: MessageField.tsx
frontend/src/pages/: Home.tsx  WSExample.tsx
frontend/src/style/: variables.scss
frontend/src/utils/: Cache.ts  Date.ts
(+68 files in other folders)
